--- a/AvaloniaBankAppEF/Assets/Styles/TextStyles.axaml
+++ b/AvaloniaBankAppEF/Assets/Styles/TextStyles.axaml
@@ -31,4 +31,15 @@
 		<Setter Property="HorizontalAlignment" Value="Center"/>
 		<Setter Property="VerticalAlignment" Value="Center"/>
 	</Style>
+	<Style Selector="TextBox.MainTextBox:focus /template/ Border#PART_BorderElement">
+		<Setter Property="Background" Value="{StaticResource TransparentBrush}"/>
+		<Setter Property="BorderBrush" Value="{DynamicResource DarkGrayBrush}"/>
+		<Setter Property="BorderThickness" Value="0,0,0,1"/>
+	</Style>
+	<Style Selector="TextBox.MainTextBox:pointerover /template/ Border#PART_BorderElement">
+		<Setter Property="Background" Value="{StaticResource TransparentBrush}" />
+	</Style>
+	<Style Selector="TextBox.MainTextBox:disabled /template/ Border#PART_BorderElement">
+		<Setter Property="Background" Value="{StaticResource TransparentBrush}" />
+	</Style>
 </Styles>
