--- a/AvaloniaBankAppEF/Views/LoginView.axaml
+++ b/AvaloniaBankAppEF/Views/LoginView.axaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="clr-namespace:AvaloniaBankAppEF.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="AvaloniaBankAppEF.Views.MainView"
+             x:Class="AvaloniaBankAppEF.Views.LoginView"
              x:DataType="vm:MainViewModel"	
 			 Background="{StaticResource TransparentBrush}"
 			 >
