main view base layout

--- a/AvaloniaBankAppEF/Views/MainWindow.axaml
+++ b/AvaloniaBankAppEF/Views/MainWindow.axaml
@@ -15,6 +15,7 @@
 		</LinearGradientBrush>
 	</Window.Background>
 	
-        <views:LoginView />
+	<!--<views:LoginView />-->
+	<views:MainView/>
 	
 </Window>
