--- a/AvaloniaBankAppEF/Views/MainView.axaml
+++ b/AvaloniaBankAppEF/Views/MainView.axaml
@@ -11,26 +11,7 @@
 	<UserControl.DataContext>
 		<vm:MainViewModel/>
 	</UserControl.DataContext>
-	<Grid Margin="20" RowDefinitions="0.2* 0.8*" ColumnDefinitions="1* 1*" ShowGridLines="False" >
-
-		<DataGrid Grid.Row="1" Grid.Column="1">
-			<DataGrid.Columns>
-				<DataGridTextColumn Header="N" IsReadOnly="True"/>
-				<DataGridTextColumn Header="Name" IsReadOnly="True"/>
-				<DataGridTextColumn Header="Patronymic" IsReadOnly="True" />
-				<DataGridTextColumn Header="Surname" IsReadOnly="True" />
-				<DataGridTextColumn Header="Phone" IsReadOnly="True" />
-				<DataGridTextColumn Header="E-mail" IsReadOnly="True"/>
-			</DataGrid.Columns>
-		</DataGrid>
-
-		<DataGrid Grid.Row="1" Grid.Column="0">
-			<DataGrid.Columns>
-				<DataGridTextColumn Header="N" IsReadOnly="True" Binding="{Binding Path=Id}"/>
-				<DataGridTextColumn Header="Prodsuct Code" IsReadOnly="True" Binding="{Binding Path=ItemCode}"/>
-				<DataGridTextColumn Header="Product name" IsReadOnly="True" Binding="{Binding Path=ItemName}"/>
-			</DataGrid.Columns>
-		</DataGrid>
+	<Grid Margin="20" RowDefinitions="0.15* 0.85*" ColumnDefinitions="1* 1*" ShowGridLines="False" >
 
 		<StackPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
 					Orientation="Horizontal"
@@ -40,8 +21,36 @@
 			<Button Classes="BlueRoundedBtn"> Change Customer</Button>
 			<Button Classes="BlueRoundedBtn"> Add Customer</Button>
 			<Button Classes="BlueRoundedBtn"> Add Order</Button>
-			<Button Classes="BlueRoundedBtn"> Clear the tables</Button>
+			<Button Classes="BlueRoundedBtn"> Clear the tables</Button>	
 		</StackPanel>
+		
+		<DataGrid Grid.Row="1" Grid.Column="0" ItemsSource="{CompiledBinding Customers}" 
+				  VerticalAlignment="Stretch"
+				  Margin="20 10"
+				  >
+			
+			<DataGrid.Columns>
+				<DataGridTextColumn Header="N" IsReadOnly="True" Binding="{CompiledBinding Path=Id}"/>
+				<DataGridTextColumn Header="Name" IsReadOnly="True" Binding="{CompiledBinding Path=Name}"/>
+				<DataGridTextColumn Header="Patronymic" IsReadOnly="True"  Binding="{CompiledBinding Path=Patronymic}"/>
+				<DataGridTextColumn Header="Surname" IsReadOnly="True"  Binding="{CompiledBinding Path=Surname}"/>
+				<DataGridTextColumn Header="Phone" IsReadOnly="True"  Binding="{CompiledBinding Path=Phone}"/>
+				<DataGridTextColumn Header="E-mail" IsReadOnly="True" Binding="{CompiledBinding Path=Mail}"/>
+			</DataGrid.Columns>
+		</DataGrid>
+
+		<DataGrid Grid.Row="1" Grid.Column="1" ItemsSource="{CompiledBinding Orders}" 
+				  VerticalAlignment="Stretch"
+				  Margin="20 10"
+				  >
+			<DataGrid.Columns>
+				<DataGridTextColumn Header="N" IsReadOnly="True" Binding="{CompiledBinding Path=Id}"/>
+				<DataGridTextColumn Header="Prodsuct Code" IsReadOnly="True" Binding="{CompiledBinding Path=Code}"/>
+				<DataGridTextColumn Header="Product name" IsReadOnly="True" Binding="{CompiledBinding Path=Name}"/>
+			</DataGrid.Columns>
+		</DataGrid>
+
+		
 
 	</Grid>
 
