--- a/AvaloniaBankAppEF/Views/MainWindow.axaml
+++ b/AvaloniaBankAppEF/Views/MainWindow.axaml
@@ -4,7 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:AvaloniaBankAppEF.Views"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"	
+		Width="1420" Height="720"
+		MinWidth="800" MinHeight="450"
         x:Class="AvaloniaBankAppEF.Views.MainWindow"
         Title="AvaloniaBankAppEF"
 		>
