--- a/AvaloniaBankAppEF/Views/LoginView.axaml
+++ b/AvaloniaBankAppEF/Views/LoginView.axaml
@@ -8,10 +8,6 @@
              x:DataType="vm:LoginViewModel"	
 			 Background="{StaticResource TransparentBrush}"
 			 >
-	
-    <Design.DataContext>
-		<vm:LoginViewModel/>
-  </Design.DataContext>
 
 	<Grid HorizontalAlignment="Center" 
 		  VerticalAlignment="Center"
@@ -22,7 +18,8 @@
 		<TextBox Grid.Row="1" Classes="MainTextBox" Margin="0 0 0 10"></TextBox>
 		<TextBlock Grid.Row="2" Classes="MainTextBlock" Margin="0 10 0 10">Password</TextBlock>
 		<TextBox Grid.Row="3" Classes="MainTextBox" Margin="0 0 0 10"></TextBox>
-		<Button Grid.Row="4" Classes="BlueRoundedBtn" Margin="0 10 0 0">Connect</Button>
+		
+		<Button Grid.Row="4" Classes="BlueRoundedBtn" Margin="0 10 0 0" Command="{CompiledBinding LoginCommand}">Connect</Button>
 
 	</Grid>
   
