--- a/AvaloniaBankAppEF/Views/LoginView.axaml
+++ b/AvaloniaBankAppEF/Views/LoginView.axaml
@@ -7,6 +7,7 @@
              x:Class="AvaloniaBankAppEF.Views.LoginView"
              x:DataType="vm:LoginViewModel"	
 			 Background="{StaticResource TransparentBrush}"
+			 x:CompileBindings="False"
 			 >
 
 	<Grid HorizontalAlignment="Center" 
@@ -19,7 +20,7 @@
 		<TextBlock Grid.Row="2" Classes="MainTextBlock" Margin="0 10 0 10">Password</TextBlock>
 		<TextBox Grid.Row="3" Classes="MainTextBox" Margin="0 0 0 10"></TextBox>
 		
-		<Button Grid.Row="4" Classes="BlueRoundedBtn" Margin="0 10 0 0" Command="{CompiledBinding LoginCommand}">Connect</Button>
+		<Button Grid.Row="4" Classes="BlueRoundedBtn" Margin="0 10 0 0" Command="{Binding LoginCommand}">Connect</Button>
 
 	</Grid>
   
